# promotion_Renata

./: .dockerignore  .editorconfig  .env.example  .env.example .env  .env.test  .gitattributes  .gitignore  Dockerfile  README.md  agents.md  compose.prod.yml  create_models.py  database.py  docker-compose.dev.yml  docker-compose.yml  main.py  models.py  pyproject.toml  remove_bom.py  requirements.txt  run_all.py  setup.cfg  tatus  test_env.py
ai_agent/: __init__.py  agent.py  client.py
backend/: main.py
core/: __init__.py  database.py  init_db.py  logging.py  main.py  models.py
crm_web/: api.py  main.py
docs/: architecture.md  codex-agents.md  principles.md
rag_data/: faq.md  gestalt.md  getcourse.md  offers.md
scripts/: admin_recheck_yookassa_payment.py  backfill_recompute_stage.py  check_encoding.py  compose_doctor.py  create_admin_user.py  db_activity_probe.py  db_ping.py  migrate_catalog_items.py  migrate_events_external.py  mojibake_doctor.py  nginx_doctor.py  nginx_header_check.sh  rag_doctor.py  rag_smoke.py  run_migrations.py  runtime_env_probe.py  seed_crm.py  smoke_openrouter.py  yookassa_smoke.py
shared/: database.py
telegram_bot/: __init__.py  contact_parser.py  health.py  keyboards.py  lock_utils.py  main.py  private_channel_gate.py  screen_manager.py  text_formatting.py  text_utils.py  typing_indicator.py  utils.py
tests/: conftest.py  test_admin_recheck_script.py  test_ai_rag_trace.py  test_ai_rag_usage.py  test_assistant_sticky_mode.py  test_bot.py  test_bot_email_capture.py  test_bot_error_classification.py  test_bot_lock_env.py  (+54 more)
(+146 files in other folders)
