[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promotion_renata"
version = "0.1.0"
description = "Renata Promotion: CRM + Telegram bot + AI assistant"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "telegram_bot*"]
